--- a/trunk/src/myFrame.form
+++ b/trunk/src/myFrame.form
@@ -53,7 +53,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="codebaseLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="codebaseTextField" pref="229" max="32767" attributes="0"/>
+                  <Component id="codebaseTextField" pref="233" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="serverStartButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -68,10 +68,10 @@
                       <Component id="hostComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="portLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="portTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="serverStartButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="codebaseLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="codebaseTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="hostLabel" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="serverStartButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="codebaseTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="19" max="32767" attributes="0"/>
               </Group>
@@ -107,17 +107,6 @@
             <Property name="text" type="java.lang.String" value="80"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JToggleButton" name="serverStartButton">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="ff" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="GESTOPT"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="serverStartButtonActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JLabel" name="codebaseLabel">
           <Properties>
             <Property name="text" type="java.lang.String" value="Codebase"/>
@@ -129,6 +118,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="codebaseTextFieldActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="serverStartButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="SERVER"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="serverStartButtonActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
