--- a/trunk/src/server/myFrame.form
+++ b/trunk/src/server/myFrame.form
@@ -21,19 +21,25 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
+          <Component id="errorMessageLabel" alignment="0" pref="627" max="32767" attributes="0"/>
           <Component id="topPanel" alignment="0" max="32767" attributes="0"/>
-          <Component id="logScrollPane" alignment="0" pref="619" max="32767" attributes="0"/>
-          <Component id="errorMessageLabel" alignment="0" pref="619" max="32767" attributes="0"/>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <Component id="logScrollPane" alignment="0" pref="627" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <Component id="topPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="logScrollPane" min="-2" pref="289" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="errorMessageLabel" pref="19" max="32767" attributes="0"/>
+              <EmptySpace pref="305" max="32767" attributes="0"/>
+              <Component id="errorMessageLabel" min="-2" pref="23" max="-2" attributes="0"/>
+          </Group>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace pref="54" max="32767" attributes="0"/>
+                  <Component id="logScrollPane" min="-2" pref="325" max="-2" attributes="0"/>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -48,15 +54,15 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="hostLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="hostComboBox" min="-2" pref="103" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="hostComboBox" pref="204" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="portLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="portTextField" min="-2" pref="46" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="codebaseLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="codebaseTextField" pref="233" max="32767" attributes="0"/>
+                  <Component id="codebaseTextField" min="-2" pref="168" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="serverStartButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -68,15 +74,15 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="hostComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="portLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="portTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="codebaseLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="hostLabel" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                       <Component id="serverStartButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="codebaseTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="codebaseLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="portTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="portLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="hostComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="19" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -90,9 +96,8 @@
         <Component class="javax.swing.JComboBox" name="hostComboBox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="1">
                 <StringItem index="0" value="127.0.0.1"/>
-                <StringItem index="1" value="10.0.0.2"/>
               </StringArray>
             </Property>
           </Properties>
@@ -133,25 +138,23 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JLabel" name="errorMessageLabel">
+    </Component>
     <Container class="javax.swing.JScrollPane" name="logScrollPane">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="verticalScrollBarPolicy" type="int" value="21"/>
-      </Properties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="logTextArea">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="null"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="errorMessageLabel">
-    </Component>
   </SubComponents>
 </Form>
